using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class StringClass
{
    public static string TAG_ISIDLE = "isIdle";
    public static string TAG_ISRUNNING = "isRunning";
    public static string TAG_ISBOOSTRUN = "isBoostRun";
    public static string TAG_ISDANCE = "isDance";
    public static string TAG_ISSTUN = "isStun";
    public static string TAG_FINISH = "Finish";
    public static string TAG_PREFSRESET = "PrefsReset";
    public static string TAG_OBSTACLE = "Obstacle";
    public static string TAG_GOLD = "Gold";
    public static string TAG_DIAMOND = "Diamond";
}